Updated the way time is taken from github